Fix a number of small typos

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -500,7 +500,7 @@
       &lt;/interface&gt;
       ...</pre>
 
-    <h5><a name="elementsNICSBridge">Bridge to to LAN</a></h5>
+    <h5><a name="elementsNICSBridge">Bridge to LAN</a></h5>
 
     <p>
       <strong><em>
