--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -25,6 +25,7 @@ src/openvz/openvz_driver.c
 src/phyp/phyp_driver.c
 src/qemu/qemu_conf.c
 src/qemu/qemu_driver.c
+src/qemu/qemu_monitor_text.c
 src/remote/remote_driver.c
 src/secret/secret_driver.c
 src/security/security_driver.c
