--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -47,6 +47,7 @@ src/util/conf.c
 src/util/iptables.c
 src/util/logging.c
 src/util/pci.c
+src/util/storage_file.c
 src/util/util.c
 src/util/uuid.c
 src/util/virterror.c
