Fix a few 'make rpm' breakages
* Makefile.am: examples/domain-events/events-python should be added
  to dist tarball
* libvirt.spec.in: there is no makefile in domain-events but in
  domain-events/events-c and python/libvirtclass.txt has vanished

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,6 +25,7 @@ EXTRA_DIST = \
   .x-sc_prohibit_nonreentrant \
   Makefile.nonreentrant \
   autogen.sh \
+  examples/domain-events/events-python \
   $(XML_EXAMPLES)
 
 pkgconfigdir = $(libdir)/pkgconfig
