Fix build in separate build directory
* cfg.mk: use $(srcdir)/ prefix for Makefile.nonreentrant include
* examples/domain-events/events-c/Makefile.am tools/Makefile.am
  examples/hellolibvirt/Makefile.am: extend the include paths to
  use $(top_srcdir)/include too.

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -43,7 +43,7 @@ virsh_LDADD =							\
 		$(VIRSH_LIBS)
 virsh_CFLAGS = 							\
 		-I$(top_srcdir)/gnulib/lib -I../gnulib/lib	\
-		-I../include					\
+		-I../include -I$(top_srcdir)/include		\
 		-I$(top_srcdir)/src				\
 		-I$(top_srcdir)/src/util			\
 		-DGETTEXT_PACKAGE=\"$(PACKAGE)\"		\
