tests: Add XML 2 XML tests for storage pools.
Move existing schema data to an input directory. Add extra files for more
thorough XML testing.

--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -15,6 +15,7 @@ qemuargv2xmltest
 qemuhelptest
 nodedevxml2xmltest
 interfacexml2xmltest
+storagepoolxml2xmltest
 nodeinfotest
 statstest
 qparamtest
