tests: Break out duplicate schema verification functionality.
All schema tests have identical functionality, so avoid the duplication.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -52,6 +52,7 @@ EXTRA_DIST =		\
 	test-lib.sh	\
 	qemuxml2argvdata \
 	nodeinfodata     \
+	schematestutils.sh \
 	capabilityschematest \
 	capabilityschemadata \
 	networkschematest \
